[package]
description = 'TVM CLient Command Line Tool'
documentation = 'https://docs.ton.dev'
edition = '2018'
homepage = 'https://ton.dev'
keywords = [ 'TVM', 'SDK', 'smart-contract' ]
license = 'Apache-2.0'
name = 'evercli'
readme = 'README.md'
repository = 'https://github.com/ton-dev-dao/ton-dev-sdk'
version = '1.49.1'

[dependencies]
base64 = '0.13.0'
dirs = '3.0.1'
json5 = '0.2.8'
regex = '1.3.9'
serde = '1.0.116'
serde_derive = '1.0.116'
serde_json = '1.0.58'
api_info = { path = '../api/info' }
ton_dev_client = { path = '../ton_dev_client' }

[dev-dependencies]
assert_cmd = '1.0.1'
predicates = '1.0.5'

