[package]
edition = '2018'
license = 'Apache-2.0'
name = 'ton_dev_client_processing'
version = '1.49.1'

[dependencies]
async-trait = '0.1.40'
base64 = '0.21.0'
futures = '0.3.4'
log = '0.4.11'
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
serde_repr = '0.1.7'
tokio = { default-features = false, features = [ 'sync' ], version = '1.4' }
api_derive = { path = '../api/derive' }
api_info = { path = '../api/info' }
ton_dev_block = { git = 'https://github.com/ton-dev-dao/ton-dev-block.git', tag = '1.11.20' }

[dev-dependencies]
tokio = { default-features = false, features = [ 'sync', 'rt-multi-thread', 'macros', 'time', 'net', 'fs' ], version = '1.4' }

[lib]
crate-type = [ 'cdylib', 'rlib', 'staticlib' ]
name = 'ton_dev_client_processing'

