[package]
edition = '2018'
license = 'Apache-2.0'
name = 'ton_dev_sdk'
version = '1.49.1'

[dependencies]
anyhow = '1.0'
base64 = '0.10.0'
chrono = '0.4.9'
hex = '0.3.2'
lazy_static = '1.1.0'
log = '0.4.11'
num-bigint = '0.4'
num-traits = '0.2'
serde = '1.0.91'
serde_derive = '1.0.91'
serde_json = '1.0.41'
sha2 = '0.9'
thiserror = '1.0'
api_derive = { path = '../api/derive' }
api_info = { path = '../api/info' }
ton_dev_abi = { git = 'https://github.com/ton-dev-dao/ton-dev-abi.git', tag = '2.8.1' }
ton_dev_block = { git = 'https://github.com/ton-dev-dao/ton-dev-block.git', tag = '1.11.20' }
